# emi-api

./: .gitignore  pyproject.toml
scripts/: generate_embeddings.py
src/app/: main.py
src/app/core/: discovery.py
src/app/projects/emi/: create_admin.py  seed.py
src/app/projects/emi/api/: auth.py  deps.py  router.py  schemas.py
src/app/projects/emi/domain/: auth_service.py  chat_service.py  exceptions.py  order_service.py  product_service.py  security.py
src/app/projects/emi/domain/models/: conversations.py  order.py  product.py  user.py
src/app/projects/emi/infra/: settings.py
src/app/projects/emi/infra/clients/: embedding.py  firebase.py  llm.py
src/app/projects/emi/infra/db/: mongo.py
src/app/projects/emi/infra/repositories/: chat_repo.py  device_token_repo.py  order_repo.py  product_repo.py  user_repo.py
